Template question UPDATE request added #2. Swagger documented
