# server/src/controllers/v1/TemplateQuestionController.ts
@@ -2,7 +2,7 @@ import Joi from "joi";
 import TemplateQuestionModel, {TemplateQuestionStatus} from "../../models/TemplateQuestionModel";
 import {HttpCode} from "../../types/errorHandler";
 import {MyContext} from "../../types/koa";
-import Controller from "../Controller";
+import Controller, {UserInputValidationError} from "../Controller";
 
 export const CreateTemplateGroupSchema = Joi.object({
   text: Joi.string().min(6).max(128).required().label('Template Name Text'),
@@ -12,6 +12,28 @@ export const CreateTemplateGroupSchema = Joi.object({
 type TemplateQuestionType = {
   text: string;
   groupId: number
+}
+
+const UpdateQuestionSchema = Joi.object({
+  text: Joi.string().min(6).max(128).required().label('Question Name Text'),
+  status: Joi.string()
+    .optional()
+    .valid(TemplateQuestionStatus.active, TemplateQuestionStatus.hidden)
+    .default(TemplateQuestionStatus.active)
+    .label('Template Status'),
+});
+
+type QuestionType = {
+  text: string,
+  status: TemplateQuestionStatus
+}
+
+const UpdateQuestionQuerySchema = Joi.object({
+  questionId: Joi.number().positive().required().label('Question ID'),
+});
+
+type QuestionQueryType = {
+  questionId: number
 }
 
 class TemplateQuestionController extends Controller {
@@ -31,6 +53,39 @@ class TemplateQuestionController extends Controller {
     });
 
     ctx.status = HttpCode.created;
+  }
+
+  public async getTemplateQuestionById(ctx: MyContext): Promise<void> {
+    const validatedParam = TemplateQuestionController.assert<QuestionQueryType>(Joi.object({
+      questionId: Joi.number().positive().required().label('Question ID'),
+    }), ctx.params);
+
+    ctx.body = await TemplateQuestionModel.findByPk(validatedParam.questionId);
+  }
+
+  public async updateTemplateQuestionById(ctx: MyContext): Promise<void> {
+    const validatedBody = TemplateQuestionController.assert<QuestionType>(UpdateQuestionSchema, ctx.request.body);
+    const validatedParam = TemplateQuestionController.assert<QuestionQueryType>(UpdateQuestionQuerySchema, ctx.params);
+
+    const [updatedRecordCount] = await TemplateQuestionModel.update({
+      text: validatedBody.text,
+      status: validatedBody.status,
+    }, {
+      where: {
+        id: validatedParam.questionId
+      }
+    });
+
+    if (updatedRecordCount !== 1) {
+      throw new UserInputValidationError(TemplateQuestionController.composeJoyErrorDetails([{
+          message: `Record was not updated for the id: ${validatedParam.questionId}`,
+          key: 'text',
+          value: validatedBody.text
+        }])
+      );
+    }
+
+    ctx.status = HttpCode.noContent;
   }
 }
 
